welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:22: error: not found: value setBrosseCouleur
	setBrosseCouleur(c);
        ^PatternPicture:29: error: not found: value setBrosseCouleur
	setBrosseCouleur(c);
        ^PatternPicture:39: error: not found: value setBrosseCouleur
	setBrosseCouleur(c);
        ^PatternPicture:45: error: not found: value setBrosseCouleur
	setBrosseCouleur(c);
        ^